--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: timdhoffmann # replace with your_twitter_username or comment to remove link from footer
-github_username:  hoffmannprojects # replace with your_github_username or comment to remove link from footer
+github_username:  timdhoffmann # replace with your_github_username or comment to remove link from footer
 # instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 social:
   name: Tim Hoffmann
@@ -15,7 +15,7 @@ social:
 #    - https://www.facebook.com/ben.balter
     - https://www.linkedin.com/in/timdhoffmann
 #    - https://plus.google.com/+BenBalter
-    - https://github.com/hoffmannprojects
+    - https://github.com/timdhoffmann
 #    - https://keybase.io/benbalter
 
 disqus:
